feature 6, 7. But not completly
