# src/main/java/com/classroom/core/dto/team/SelectCaptainsRequest.java
@@ -1,0 +1,15 @@
+package com.classroom.core.dto.team;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+public class SelectCaptainsRequest {
+
+    private boolean reshuffle = false;
+}
